# ChangeLog for dev-ruby/database_cleaner
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*database_cleaner-0.8.0 (21 Sep 2012)

  21 Sep 2012; Hans de Graaff <graaff@gentoo.org>
  +database_cleaner-0.8.0.ebuild:
  Version bump.

  23 Jul 2012; Hans de Graaff <graaff@gentoo.org>
  database_cleaner-0.7.2.ebuild:
  Add ruby19. Restrict tests since they fail (seemingly innocently) with
  ruby19.

  20 Jul 2012; Hans de Graaff <graaff@gentoo.org>
  -database_cleaner-0.6.4.ebuild, -database_cleaner-0.7.1.ebuild:
  Remove old versions.

*database_cleaner-0.7.2 (13 Apr 2012)

  13 Apr 2012; Hans de Graaff <graaff@gentoo.org>
  +database_cleaner-0.7.2.ebuild:
  Version bump.

*database_cleaner-0.7.1 (09 Mar 2012)

  09 Mar 2012; Hans de Graaff <graaff@gentoo.org>
  +database_cleaner-0.7.1.ebuild:
  Version bump.

*database_cleaner-0.6.7 (19 Jun 2011)

  19 Jun 2011; Hans de Graaff <graaff@gentoo.org>
  +database_cleaner-0.6.7.ebuild:
  Version bump.

  19 Jun 2011; Hans de Graaff <graaff@gentoo.org>
  -database_cleaner-0.5.2.ebuild:
  Remove old version.

*database_cleaner-0.6.4 (07 Mar 2011)

  07 Mar 2011; Hans de Graaff <graaff@gentoo.org>
  +database_cleaner-0.6.4.ebuild:
  Version bump.

  28 Dec 2010; Hans de Graaff <graaff@gentoo.org>
  database_cleaner-0.5.2.ebuild:
  Keyword ~x86-macos.

  09 Jul 2010; Hans de Graaff <graaff@gentoo.org>
  -database_cleaner-0.4.2.ebuild, -database_cleaner-0.4.3.ebuild,
  -database_cleaner-0.5.0.ebuild:
  Remove old versions.

*database_cleaner-0.5.2 (07 May 2010)

  07 May 2010; Hans de Graaff <graaff@gentoo.org>
  +database_cleaner-0.5.2.ebuild, metadata.xml:
  Version bump.

*database_cleaner-0.5.0 (23 Apr 2010)

  23 Apr 2010; Hans de Graaff <graaff@gentoo.org>
  +database_cleaner-0.5.0.ebuild:
  Version bump.

*database_cleaner-0.4.3 (09 Feb 2010)

  09 Feb 2010; Hans de Graaff <graaff@gentoo.org>
  +database_cleaner-0.4.3.ebuild: