@@ -4,10 +4,11 @@ Hash: SHA256
 DIST database_cleaner-0.6.7.gem 29696 SHA256 5704d3102bf65d950ead25031f4adb1050eae2196c2b57db7308c941a1e092d1 SHA512 411259fa3c375c4fb3edef245f4ac40d13f5c859096671d070bf015df55417aae0a40ccd48233408c1e58541f943e3b209331a34f736ea6170d4a67c8c8075fe WHIRLPOOL e48dc4c0ccdff6f36d96c875fa9789e004ed9d7f50c9b4e1cdff8be6d38b800073d89eca86a1a9964701ce3a79115d3b482b66f149699fc86d96e8ec9ab8decf
 DIST database_cleaner-0.7.2.gem 31744 SHA256 6273e46b3102e6c735db9a1206f226a6d7d69ea6ce318d2d160e09e25ddbd628 SHA512 b044656df1aed743cf40c17d0267215adfe3b5327a13d39920d5974456c542529a44d54d1967e5d702932602bb59c2305c337dd3c79d948cd8b597d17c0af26b WHIRLPOOL 78c44d698a4d8b63eafef8bd5217ec52a3cca83e24083a0df9ced62c3abfd3a7991f1b23106450fe79bf08d3a87f5493a8ff3fedb9f268d9a80b0fbb6b107108
 DIST database_cleaner-0.8.0.gem 32256 SHA256 260d32717b75c7b891a775bb661a9a8fa712217a3262bd822350bf3b1d792909 SHA512 d2d9887834933f020e784d7b699b53eb072ad2bba7f9367d46441e99ef2a69dcedd8efbd93b77a661e28d90dfadfa9a791f3cd756879458f0dd4799e1fd54d73 WHIRLPOOL a00b6fe8a8d8828baa539803756afcc67331397f75e64d1e95e33cf1b88b087f005db0d1f4effaecb603998748763d52ee9693d0eac896aee3f5f1db771fbac7
+DIST database_cleaner-0.9.1.gem 38912 SHA256 3706756a47cfb8d1527776e7bf5ab5315d95f6650ca3730fdafdc61b0adc518c SHA512 548d27bf6261cf4574349d19b301ebff6b3a8f3089ced16c75118d5a8d98edb4574b9bdafe9366e871ca4217284e566865cf71f9e3f475c67c40461b817049fc WHIRLPOOL fe423c106ac91a6d41f010c2044dfc00a31c0c6583e4d78b5ef0ca02c58d2256527283e9db6affe94faafede5a4f1e056b2b09ef8c0583811439779674c0ddaa
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlBcK5MACgkQiIP6VqMIqNfflAD+PftZwELp/e2ST0/zB7FcOYeK
-XbJu6dtUd2KL828l/zIA/RbA/Ltvvehg+/MiSoLXZVH/YsZyFhAjn2n6YXedTsuU
-=C1YS
+iF4EAREIAAYFAlCk8+cACgkQiIP6VqMIqNedMAD9FB9ZeVa0dl1tLcaWvnJQFU02
+m7+5dfXWLb3iUKOBnZMA/j2NHI2n8Gi6LWmBwSFK8dfZoiyLoNeAbX+XhLtPNXg2
+=e2hg
 -----END PGP SIGNATURE-----
