@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*database_cleaner-0.9.1 (15 Nov 2012)
+
+  15 Nov 2012; Hans de Graaff <graaff@gentoo.org>
+  +database_cleaner-0.9.1.ebuild:
+  Version bump.
+
 *database_cleaner-0.8.0 (21 Sep 2012)
 
   21 Sep 2012; Hans de Graaff <graaff@gentoo.org>
